rns-lang/tests/snapshots/lexer-directives-dot_dot_method.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
..method
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/lexer/directives/dot_dot_method.ja:1:1 ]
   │
 1 │ ..method
   │ ────┬───  
   │     ╰───── Unknown directive '..method'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
